--- a/_posts/2010-01-01-mac.markdown
+++ b/_posts/2010-01-01-mac.markdown
@@ -1,6 +1,7 @@
 ---
 layout: page
-title:  "Mac"
+title:  "InstallPython3.com | Mac"
+description: "How to install Python 3 on a Mac computer"
 date:   2019-08-06 08:53:27 -0500
 categories:
 ---
