--- a/_posts/2010-01-01-windows.markdown
+++ b/_posts/2010-01-01-windows.markdown
@@ -78,3 +78,13 @@ That's it! You're ready to go.
 
 ## Next Steps
 To learn more about Python, the books [Python Crash Course](https://amzn.to/2okggMH) and [Automate the Boring Stuff](https://amzn.to/366CebJ) are great resources. For free tutorials on web development with Python check out [Learn Django](https://learndjango.com).
+
+
+<!--
+Pip
+Virtualenvs
+https://projects.raspberrypi.org/en/projects/using-pip-on-windows
+https://xkcd.com/1987/
+
+Installing Python pains...https://twitter.com/ClausWilke/status/1234899876892356610
+-->
