:hammer: Ignore virtual but still build the page

--- a/_posts/2010-01-01-virtual.markdown
+++ b/_posts/2010-01-01-virtual.markdown
@@ -1,7 +1,9 @@
+---
 layout: page
 title:  "Virtual Environments"
 date:   2019-08-06 08:53:27 -0500
 categories:
+sitemap: false
 ---
 
 ### Virtual Environments
