--- a/_posts/2010-01-01-windows.markdown
+++ b/_posts/2010-01-01-windows.markdown
@@ -78,7 +78,7 @@ That's it! You're ready to go.
 <img class="img-fluid" src="{{ site.url }}/assets/images/windows/powershell.png" alt="Powershell">
 
 ## Next Steps
-To learn more about Python, the books [Python Crash Course](https://amzn.to/2okggMH) and [Automate the Boring Stuff](https://amzn.to/366CebJ) are great resources. For free tutorials on web development with Python check out [Learn Django](https://learndjango.com).
+To learn more about Python, the books [Python Crash Course](https://amzn.to/3dGYTRe) and [Automate the Boring Stuff](https://amzn.to/366CebJ) are great resources. For free tutorials on web development with Python check out [Learn Django](https://learndjango.com).
 
 
 <!--
