--- a/_posts/2010-01-01-windows.markdown
+++ b/_posts/2010-01-01-windows.markdown
@@ -11,81 +11,41 @@ sitemap: true
 
 Microsoft hosts a community release of Python 3 in the Microsoft Store for computers running Windows 10+, the latest version of the operating system. This is now the recommended way to install Python: it handles auto-updates, can be uninstalled easily, and does not update PATH variables in a way that breaks other applications.
 
-By contrast, if you [download Python directly](https://www.python.org/downloads/) from the official Python website, the PATH configuration is complicated to manage and may break other applications.
-
-
-## Upgrading Windows 10
-
-The first step is to confirm your computer is running Windows 10. To check, click the Start icon in the lower left corner of your screen, then on the gear icon (Settings).
-
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/start_icon.png" alt="Start Icon">
-
-Now click on "Update & Security".
-
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/update_security.png" alt="Update & Security">
-
-Then on the right panel, scroll down to "OS build info." Under "Windows Specifications" you can confirm you're on Windows 10.
-
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/windows_spec.png" alt="Windows Specification">
-
-If you're not on the latest version of Windows 10, click the back arrow to "Update & Security" and "Check for Updates."
-
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/windows_update.png" alt="Windows Update">
-
-When complete, check the OS version again as described at the top of this page and ensure it is 18362.145 or higher.
-
 ## Python App in the Microsoft Store
 
-Now that you're using Windows 10 navigate to the Microsoft Store. In the search bar type "Microsoft Store" and it should be the top result.
+Now that you're using Windows 10 click on the search bar at the bottom left of the screen and type "python." Click on the best match result.
 
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/store.png" alt="Microsoft Store">
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/01_taskbar.png" alt="Taskbar">
 
-The Microsoft Store window will pop up. Click "Search" and then "Python." The top results should be "Python 3.7" and "Python 3.8." We will install the latest version in this tutorial: Python 3.8.
+This automatically launches Python 3.9 on the Microsoft Store. Click on the blue "Get" button to download it.
 
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/python38.png" alt="Python 3.8 Download">
+__Note__: If you have a "See System Requirements" link below the Get button it's likely you need to upgrade to Windows 10. And if you're not logged into your Microsoft account, there will be a prompt asking if you want to sign in. It's fine to say "No, thanks" for now.
 
-The app is free. Click the "Get" button.
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/02_store.png" alt="Microsoft Store">
 
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/get.png" alt="Python 3.8 Get Button">
+Once downloaded, click on the three dots `...` after "Pin to Start" and click on "Pin to Taskbar" so it is always available.
 
-**Note**: If you have a "See System Requirements" link below the Get button it's likely you need to upgrade to Windows 10. And if you're not logged into your Microsoft account, there will be a prompt asking if you want to sign in. It's fine to say "No, thanks" for now.
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/03_pin.png" alt="Microsoft Store">
+
+Click on the pinned Python logo.
+
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/04_taskbar_pin.png" alt="Pinned Taskbar">
+
+This opens up the Python IDLE. Try a simple `print("Hello, World")` command to confirm everything works:
+
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/05_idle.png" alt="Python IDLE">
 
 
-## Using Python
+It is also possible to access it via the command line. On Windows, type "PowerShell" in the Start Menu search bar in the lower left corner.
 
-There are two ways to access Python now: via the command line or IDLE. The command line app in Windows is called *PowerShell*. We can open it by typing "PowerShell" in the Start Menu in the lower left corner.
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/06_powershell.png" alt="PowerShell">
 
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/start_menu_powershell.png" alt="Powershell Link">
+This opens up the Windows PowerShell terminal which has a dark blue background. Type `python --version` to confirm which version is installed and then the same `print("Hello, World")` command as before.
 
-Once open, type `python --version` to confirm Python 3.8 is installed.
+<img class="img-fluid" src="{{ site.url }}/assets/images/windows/07_powershell_result.png" alt="PowerShell">
 
-```sh
-python --version
-Python 3.8.0
-```
-
-And then type `python` and **Return** to open the command line Python shell.
-
-```sh
-python
-Python 3.8.0 (tags/v3.8.0:fa919fd, Oct 14 2019, 19:37:50) [MSC v.1916 64 bit (AMD64)] on win32
-Type "help", "copyright", "credits", or "license" for more information.
->>>
-```
 
 That's it! You're ready to go.
 
-<img class="img-fluid" src="{{ site.url }}/assets/images/windows/powershell.png" alt="Powershell">
-
 ## Next Steps
-To learn more about Python, the books [Python Crash Course](https://amzn.to/3dGYTRe) and [Automate the Boring Stuff](https://amzn.to/366CebJ) are great resources. For free tutorials on web development with Python check out [Learn Django](https://learndjango.com).
-
-
-<!--
-Pip
-Virtualenvs
-https://projects.raspberrypi.org/en/projects/using-pip-on-windows
-https://xkcd.com/1987/
-
-Installing Python pains...https://twitter.com/ClausWilke/status/1234899876892356610
--->
+Two excellent beginner-friendly Python books are [Python Crash Course](https://amzn.to/3dGYTRe) and [Automate the Boring Stuff](https://amzn.to/366CebJ). If you'd like to learn web development with Python, check out [Learn Django](https://learndjango.com).
