--- a/_posts/2010-01-01-windows.markdown
+++ b/_posts/2010-01-01-windows.markdown
@@ -1,7 +1,7 @@
 ---
 layout: page
 title:  "InstallPython3.com | Windows"
-description: "How to install Python 3 properly on a Windows computer"
+description: "How to install Python 3 on a Windows computer"
 date:   2019-08-06 08:53:27 -0500
 categories:
 sitemap: true
@@ -49,3 +49,20 @@ That's it! You're ready to go.
 
 ## Next Steps
 Two excellent beginner-friendly Python books are [Python Crash Course](https://amzn.to/3dGYTRe) and [Automate the Boring Stuff](https://amzn.to/366CebJ). If you'd like to learn web development with Python, check out [Learn Django](https://learndjango.com).
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <a href="https://amzn.to/3dGYTRe" target="_blank">
+        <img class="img-fluid" src="{{ site.url }}/assets/images/pcc_book.jpg" alt="Python Crash Course book">
+      </a>
+      [Python Crash Course](https://amzn.to/3dGYTRe)
+    </div>
+    <div class="col">
+      <a href="https://amzn.to/3dGYTRe" target="_blank">
+        <img class="img-fluid" src="{{ site.url }}/assets/images/automate_book.jpg" alt="Automate the Boring Stuff book">
+      </a>
+      [Python Crash Course](https://amzn.to/3dGYTRe)
+    </div>
+  </div>
+</div>
