--- a/_posts/2010-01-01-linux.markdown
+++ b/_posts/2010-01-01-linux.markdown
@@ -5,6 +5,7 @@ description: "How to install Python 3 properly on a Linux computer"
 date:   2019-08-06 08:53:27 -0500
 categories:
 sitemap: true
+redirect_to: https://wsvincent.com/install-python/
 ---
 
 # Linux
